# wildcams

./: .env  .envrc  .gitignore  CLAUDE.md  README.md  check_gpu.py  cluster_plan.md  deepsort_tracker.py  experimental_results_table.md  experiments.md  flake.nix  ml_detection.py  process-ng.py  process-videos.sh  process.py  process_fullframe.py  process_motiondetection.py  pyproject.toml  sd_watcher.py  stop-watcher.sh  video_processor_base.py  watch.sh  wildlife_processor.py
.github/workflows/: ci.yml
config/: __init__.py  configuration_manager.py  processing_config.py
core/: __init__.py  batch_processor.py  constants.py  data_types.py  functional_utils.py  session_manager.py  session_reporter.py  wildlife_processor.py
knowledge/: CLAUDE.md  REFACTORING_PLAN.md  bioclip.md  cluster_plan.md  codestructure.md  experiments.md  ml_detection.py  models.md  motion_detection.md  procedures.md  refactoring_frame_sampling.md  theory.md
ml/: __init__.py  constants.py  ensemble_wrapper.py  feature_extractor.py  model_manager.py  postprocessing.py  preprocessing.py
ml/inference/: __init__.py  bioclip_inference.py  classification_coordinator.py  deepfaune_inference.py  ensemble_coordinator.py  megadetector_inference.py  rtdetr_inference.py  yolo_inference.py
motion/: __init__.py  background_subtractor.py  motion_detector.py  motion_tracker.py
pipeline/: __init__.py  camera_handling_filter.py  fullframe_validator.py  pipeline_orchestrator.py  scoring.py  step_interface.py  step_interface_v2.py
pipeline/steps/: __init__.py  camera_handling_step.py  fullframe_validation_step.py  motion_detection_step.py
pipeline/steps_v2/: __init__.py  animal_classification_step.py  camera_handling_step.py  fullframe_validation_step.py  motion_detection_step.py
tests/: conftest.py  test_config.py  test_fullframe_scoring.py  test_functional_utils.py  test_imports.py  test_postprocessing_characterization.py  test_scoring_characterization.py  test_step_results.py
tracking/: __init__.py  deepsort_tracker.py  simple_tracker.py  track_data.py  tracking_factory.py  tracking_interface.py
video_io/: __init__.py  analysis_writer.py  frame_extractor.py  processed_tracker.py  video_reader.py
