[project]
name = "wildcams"
version = "0.1.0"
description = "Wildlife camera-trap video processing: motion detection, ensemble object detection, and animal classification"
readme = "README.md"
requires-python = ">=3.13"
# Keep in sync with the PEP 723 header in process.py (the canonical runtime dependency list).
dependencies = [
    "python-dotenv>=1.0.0",
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "open-clip-torch>=2.20.0",
    "pybioclip>=0.1.0",
    "huggingface-hub>=0.19.0",
    "timm>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
sd-watcher = "sd_watcher:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

# This project is CPU-only ("CPU feasible" per the README). Pin torch/torchvision to the
# CPU wheel index so `uv sync` and CI don't pull the multi-GB CUDA build.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
